--- a/src/Styles/LeftMenu.css
+++ b/src/Styles/LeftMenu.css
@@ -5,28 +5,33 @@
     background: rgba(34, 34, 34, .6);
     backdrop-filter: blur(10px);
     padding: 25px 15px;
-    overflow: hidden;
-    transition: all .3s ease;
+    transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .leftMenu .logoContainer {
     color: #f1f1f1;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 10%;
+}
+
+.leftMenu .logoContainer .innerLogo {
+    display: flex;
+    gap: 80%;
 }
 
 .leftMenu .logoContainer i {
     font-size: 30px;
 }
 
-.leftMenu .logoContainer i:nth-child(3) {
+.leftMenu .logoContainer i:nth-child(2) {
     font-size: 20px !important;
 }
 
-.leftMenu .logoContainer h2 {
+.leftMenu .logoContainer .innerLogo h2 {
     font-size: 20px;
 }
+
 
 .searchBox {
     width: 100%;
@@ -62,6 +67,7 @@
     line-height: 45px;
     font-size: 20px;
 }
+
 
 .MenuContainer {
     margin: 15px 0;
@@ -111,6 +117,7 @@
     height: 100%;
     background-color: #46e12e;
     border-radius: 0 5px 5px 0;
+    z-index: 5;
 }
 
 .MenuContainer ul li:hover::before,
@@ -140,8 +147,8 @@
 
 .playListContainer .nameContainer p {
     font-size: 12px;
-text-transform: uppercase;
-font-weight: bold;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .playListContainer .nameContainer {
@@ -151,9 +158,10 @@ font-weight: bold;
 
 .playListContainer .playListScroll {
     height: 140px;
-overflow-x: hidden;
-overflow-y: auto;
-position: relative;
+    position: relative;
+    overflow: auto;
+    scrollbar-width: none;
+    padding-bottom: 10px;
 }
 
 .playListContainer .playListScroll .playList {
@@ -161,14 +169,20 @@ position: relative;
     color: #848484;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 0;
+    margin: 15px 0;
 }
 
-.playListContainer .playListScroll .playList .list i{
-font-size: 18px;
+.playListContainer .playListScroll .playList:hover {
+    color: #f1f1f1;
+    transition: .3s;
 }
 
-.playListContainer .playListScroll .playList .list { 
+
+.playListContainer .playListScroll .playList .list i {
+    font-size: 18px;
+}
+
+.playListContainer .playListScroll .playList .list {
     margin-right: 15px;
 }
 
@@ -176,10 +190,158 @@ font-size: 18px;
     margin-left: auto;
 }
 
-.playListContainer .playListScroll .playList p{
+.playListContainer .playListScroll .playList p {
     font-size: 16px;
     text-overflow: ellipsis;
-    overflow: hidden;
     display: inline;
 }
 
+.trackList {
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+    height: auto;
+}
+
+
+.trackInner {
+    background-color: rgb(32, 28, 28);
+    width: 100%;
+    padding: 10px;
+}
+
+.trackList .top {
+    display: flex;
+    align-items: center;
+}
+
+.trackList .top img {
+    width: 50px !important;
+}
+
+.trackList .top .trackName {
+    margin-left: 10px;
+    color: #f1f1f1;
+    font-size: 14px;
+}
+
+
+.trackList .top .trackName .trackSpan {
+    display: block;
+    font-size: 12px;
+    color: #848484;
+}
+
+.trackList .bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #848484;
+}
+
+.trackList .bottom i {
+    font-size: 13px;
+}
+
+.trackList .bottom i:hover {
+    color: #f1f1f1;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.trackList .bottom input {
+    font-size: 13px;
+    height: 5px;
+    width: 50%;
+    position: relative;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .1);
+    appearance: none;
+}
+
+/**
+Chrome & safari
+*/
+.trackList .bottom input::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    background-color: #49e12e;
+    width: 50%;
+    height: 100%;
+    border-radius: 10px;
+    z-index: 2;
+    transition: width 250ms linear;
+}
+
+.trackList .bottom input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 10px;
+    height: 15px;
+    border-radius: 10px;
+    background-color: #f1f1f1;
+    position: relative;
+    cursor: pointer;
+    margin: -2px 0 0 0 #000;
+    z-index: 3;
+    box-sizing: border-box;
+    transition: all 250ms linear;
+}
+
+
+.trackList .bottom input::-moz-progress-bar {
+    background-color: #49e12e;
+    width: 50%;
+    height: 100%;
+    border-radius: 10px;
+    z-index: 2;
+    transition: width 250ms linear;
+}
+
+.trackList .bottom input::-moz-range-thumb {
+    background-color: #f1f1f1;
+    position: relative;
+    cursor: pointer;
+    margin: -2px 0 0 0 #000;
+    z-index: 3;
+    box-sizing: border-box;
+    transition: all 250ms linear;
+}
+
+@media screen and (max-width: 550px) {
+    .leftMenu {
+        width: 64px;
+        min-width: 64px;
+    }
+
+    .leftMenu .searchBox {
+        display: none;
+    }
+
+    .leftMenu .trackList,
+    .leftMenu .playListContainer {
+        display: none;
+    }
+
+    .leftMenu .MenuContainer ul li a span {
+        display: none;
+    }
+
+    .leftMenu .MenuContainer ul li a i {
+        font-size: 26px;
+    }
+
+    .leftMenu .MenuContainer ul li {
+        margin: 25px 5px;
+    }
+
+
+    .leftMenu .logoContainer .innerLogo {
+        display: none;
+    }
+}
